# scribe-goblin

./: .gitignore  AGENTS.md  README.md  brief.md  index.html  overlay.html  package.json  tmp_th_github.txt  tmp_th_google.txt  tmp_th_google_short.txt  tmp_th_openai.txt  tmp_th_private_key.txt  tmp_th_slack.txt  tmp_th_stripe.txt  vite.config.ts
.github/workflows/: ci.yml  release.yml
backlog/: epic-003-processing-and-enrichment.md  epic-004-deduplication-and-knowledge-graph.md  epic-005-context-and-workflow-surfaces.md  epic-006-provider-and-settings-management.md  epic-007-optional-sync-and-backup.md  epic-008-clipboard-workflow-controls.md  epic-009-markdown-editor-and-linking.md  epic-010-discovery-and-workspace.md
backlog/done/: epic-001-capture-foundation.md  epic-002-search-and-retrieval.md  manual-create-badges-brief.md
docs/: centralized-editable-shortcuts-brief.md  checklist-collections-and-icon-picker-brief.md  checklist-follow-up-actions-brief.md  collection-icon-picker-brief.md  collection-level-actions-correction-brief.md  collection-rename-brief.md  epic-003-slice-1-brief.md  overlay-keyboard-modified-paste-brief.md  overlay-modified-paste-brief.md  overlay-paste-shortcut-stability-brief.md  sequential-ui-work-items-brief.md  tagging-diagnostics-and-quality-brief.md
resources/qwen-25-05b/: chat_template.jinja
resources/secret-masker/: config.json  tokenizer.json  tokenizer_config.json
src/: autocomplete.ts  embedding.ts  enrichment.ts  graph.css  logger.ts  main-keyboard.ts  main.ts  overlay-keyboard.ts  overlay-modified-paste.ts  overlay-pins.ts  overlay-theme.ts  overlay.css  overlay.ts  settings.ts  shortcuts.ts  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: autocomplete.rs  classifier.rs  clipboard.rs  db.rs  debug_log.rs  heuristics.rs  http_proxy.rs  import.rs  inference.rs  keyboard.rs  lib.rs  llamacpp.rs  main.rs  models.rs  qwen_tagger.rs  search.rs  secret_masker.rs  storage.rs  trufflehog.rs
src/main/: add-badge-modal.ts  clipboard-controller.ts  collection-controller.ts  collection-graph.ts  collection-icon-picker.ts  collections.ts  context-menu-registry.ts  dom.ts  entries-controller.ts  entry-presenters.ts  garbage-collection-controller.ts  import-controller.ts  inference-controller.ts  models-controller.ts  notes-controller.ts  progress-bar.ts  quick-add-badges.ts  search-controller.ts  secret-reveal-controller.ts  selection.ts  settings-controller.ts  shell-controller.ts  shortcuts-controller.ts  status-bar.ts
src/secret-detection/: index.ts  password-model.ts  trufflehog.ts  types.ts
src/types/: goblin-design-system.d.ts
tests/: collections.test.ts  database.test.ts  embedding.test.ts  entry-presenters.test.ts  garbage-collection.test.ts  import-behavior.test.ts  main-keyboard.test.ts  overlay-keyboard.test.ts  overlay-paste-transform.test.ts  overlay-pins.test.ts  overlay-theme.test.ts  quick-add-badges.test.ts  secret-detection.test.ts  setup.ts  shortcuts.test.ts  status-bar.test.ts
