[package]
name = "scribe-goblin"
version = "0.1.0"
description = "Local-first second brain — clipboard capture, semantic search, embeddings"
authors = ["Sergej Popov"]
edition = "2021"

[lib]
name = "scribe_goblin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Local inference (candle/mistralrs) is unusably slow unoptimized. Optimize
# dependencies even in dev builds; the workspace crate itself stays at the
# default opt-level so incremental rebuilds remain fast.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3"
time = { version = "0.3", features = ["formatting", "local-offset"] }
ureq = { version = "3", features = ["native-tls"] }
tauri-plugin-global-shortcut = "2.0.0-rc"
ort = { version = "2.0.0-rc.12", features = ["copy-dylibs"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.16"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.22"
sqlite-vec = "0.1.9"
zerocopy = { version = "0.8", features = ["derive"] }
mistralrs = "0.8.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
# candle (pinned to the same core mistralrs uses) for safetensors token
# classification — the XLM-RoBERTa secret-masker engine.
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"

[features]
# Metal (Apple GPU) inference. Requires full Xcode for the Metal shader
# compiler (`xcrun metal`); Command Line Tools alone are not enough.
# Build with: cargo tauri dev/build -- --features metal
metal = ["mistralrs/metal"]

[target.'cfg(target_os = "macos")'.dependencies]
# Apple Accelerate BLAS for faster CPU inference; needs no extra tooling.
mistralrs = { version = "0.8.1", features = ["accelerate"] }
core-graphics = "0.25"
objc2-app-kit = { version = "0.3", features = ["NSWindow"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
] }
